--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Intro Node Lab for Students",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha", 
+    "dev":"node index "
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
     "intro"
   ],
   "author": "fer@ironhack.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mocha": "^10.2.0"
+  }
 }
